# CameraSim

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  cameras.py  demo.py
src/camerasim/: __init__.py  _backend.py  calibration.py  camera.py  clock.py  contracts.py  detector.py  photometry.py  psf.py
tests/: test_calibration.py  test_camera_core.py  test_clock.py  test_contracts.py  test_detector.py  test_photometry.py  test_psf.py
